add route: delete driver
